Finishes parts of the bare minimum requirements up to create a basic shortly app

--- a/client/app/shorten/shorten.html
+++ b/client/app/shorten/shorten.html
@@ -1,6 +1,14 @@
 <div id='container'>
 <!-- Your code here -->
 
+  <div class='creator'>
+   <form>
+        <input class='text' type='text' name='url' ng-model='link.url'>
+        <input type='submit' method='POST' value='Shorten' ng-click='addLink()'>
+    </form>
+    <img class='spinner' src='assets/spiffygif_46x46.gif'>
+    <div class='message'></div>
+  </div>
 </div>
 
 
